--- a/languages/wp-job-manager-sk_SK.po
+++ b/languages/wp-job-manager-sk_SK.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
 "POT-Creation-Date: 2014-05-11 11:00:29+00:00\n"
-"PO-Revision-Date: 2014-05-12 08:21+0000\n"
-"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
+"PO-Revision-Date: 2014-10-10 17:10+0000\n"
+"Last-Translator: ponuky.eu <radoslavkliment@gmail.com>\n"
 "Language-Team: Slovak (Slovakia) (http://www.transifex.com/projects/p/wp-job-manager/language/sk_SK/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -235,7 +235,7 @@ msgstr "Vytvorenie účtu"
 
 #: includes/admin/class-wp-job-manager-settings.php:79
 msgid "Allow account creation"
-msgstr "Povoliť yytvorenie účtu"
+msgstr "Povoliť vytvorenie účtu"
 
 #: includes/admin/class-wp-job-manager-settings.php:80
 msgid ""
@@ -359,7 +359,7 @@ msgstr "Názov spoločnosti"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:40
 msgid "Company website"
-msgstr "www stránka spoločnosti"
+msgstr "Názov www stránky spoločnosti"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:44
 msgid "Company tagline"
@@ -447,7 +447,7 @@ msgstr "Dosiahol limit dotazu"
 #: includes/class-wp-job-manager-geocode.php:153
 #: includes/class-wp-job-manager-geocode.php:157
 msgid "Geocoding error"
-msgstr ""
+msgstr "Chyba Geocoding."
 
 #: includes/class-wp-job-manager-install.php:39
 msgid "Employer"
@@ -596,7 +596,7 @@ msgstr "Táto ponuka práce sa už nebude vyplňovať"
 
 #: includes/class-wp-job-manager-shortcodes.php:84
 msgid "%s has been marked as not filled"
-msgstr "%s bola označené ako nevyplnené"
+msgstr "%s bolo označené ako nevyplnené"
 
 #: includes/class-wp-job-manager-shortcodes.php:91
 msgid "%s has been deleted"
@@ -666,7 +666,7 @@ msgstr "Aplikačný email"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:108
 msgid "you@yourdomain.com"
-msgstr "you@yourdomain.com"
+msgstr "vy@vašadoména.com"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:111
 msgid "Application URL"
@@ -813,7 +813,7 @@ msgstr "Uverejnené %s pred"
 
 #: templates/content-no-jobs-found.php:1
 msgid "No more jobs found matching your selection."
-msgstr "Žiadne pracovné miesta nenašiel zodpovedajúce vášmu výberu."
+msgstr "Žiadne pracovné miesta zodpovedajúce vášmu výberu neboli nájdené."
 
 #: templates/content-single-job_listing.php:8
 msgid "This job listing has expired"
@@ -875,7 +875,7 @@ msgstr "Nemáte žiadne aktívne výpisy ponúk práce."
 
 #: templates/job-dashboard.php:36
 msgid "Mark not filled"
-msgstr "Značka, nie je vyplnené"
+msgstr "Nie je vyplnené"
 
 #: templates/job-dashboard.php:38
 msgid "Mark filled"
@@ -938,7 +938,7 @@ msgstr "Tento e-mail je už registrovaný, prosím, vyberte iný."
 
 #: wp-job-manager-template.php:116
 msgid "Active"
-msgstr "Vktívny"
+msgstr "Aktívny"
 
 #: wp-job-manager-template.php:118
 msgid "Expired"
