--- a/languages/wp-job-manager-it_IT.po
+++ b/languages/wp-job-manager-it_IT.po
@@ -1,6 +1,7 @@
 # Copyright (C) 2014 WP Job Manager
 # This file is distributed under the same license as the WP Job Manager package.
 # Translators:
+# ignazio <bluenor@gmail.com>, 2014
 # paletta, 2014
 # sinnamora <pinnamail@yahoo.com>, 2014
 msgid ""
@@ -8,8 +9,8 @@ msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
 "POT-Creation-Date: 2014-05-11 11:00:29+00:00\n"
-"PO-Revision-Date: 2014-08-13 00:39+0000\n"
-"Last-Translator: sinnamora <pinnamail@yahoo.com>\n"
+"PO-Revision-Date: 2014-10-13 21:30+0000\n"
+"Last-Translator: ignazio <bluenor@gmail.com>\n"
 "Language-Team: Italian (Italy) (http://www.transifex.com/projects/p/wp-job-manager/language/it_IT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,7 +27,7 @@ msgstr "Componenti aggiuntivi per WP Job Manager"
 msgid ""
 "Buying multiple add-ons? <a href=\"%s\">Check out the core add-on bundle "
 "&rarr;</a>"
-msgstr ""
+msgstr "Vuoi acquistare più addon? <a href=\"%s\"> Controlla il core addon & rarr; </a>"
 
 #: includes/admin/class-wp-job-manager-admin.php:57
 msgid "Settings"
@@ -245,13 +246,13 @@ msgstr "Se abilitata gli utenti non loggati potranno creare un account inserendo
 
 #: includes/admin/class-wp-job-manager-settings.php:87
 msgid "Account Role"
-msgstr ""
+msgstr "Ruolo dell'Account"
 
 #: includes/admin/class-wp-job-manager-settings.php:88
 msgid ""
 "If you enable registration on your job submission form, choose a role for "
 "the new user."
-msgstr ""
+msgstr "Se abiliti la registrazione sul modulo di invio dei lavori, scegli un ruolo per il nuovo utente."
 
 #: includes/admin/class-wp-job-manager-settings.php:95
 msgid "Account required"
@@ -295,7 +296,7 @@ msgstr "Modalità di candidatura"
 
 #: includes/admin/class-wp-job-manager-settings.php:121
 msgid "Choose what employers can use for their job application method."
-msgstr ""
+msgstr "Scegli quello che i datori di lavoro possono utilizzare per il loro metodo di sottomissione delle offerte di lavoro."
 
 #: includes/admin/class-wp-job-manager-settings.php:124
 msgid "Email address or website URL"
@@ -421,7 +422,7 @@ msgstr "Carica"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:269
 msgid "Guest user"
-msgstr ""
+msgstr "Utente Guest"
 
 #: includes/class-wp-job-manager-ajax.php:111
 msgid "Showing %s&ldquo;%s&rdquo; %sjobs"
@@ -447,7 +448,7 @@ msgstr "Limite di query raggiunto"
 #: includes/class-wp-job-manager-geocode.php:153
 #: includes/class-wp-job-manager-geocode.php:157
 msgid "Geocoding error"
-msgstr ""
+msgstr "Errore nella Geolocalizzazione"
 
 #: includes/class-wp-job-manager-install.php:39
 msgid "Employer"
@@ -665,7 +666,7 @@ msgstr "Email di candidatura"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:108
 msgid "you@yourdomain.com"
-msgstr ""
+msgstr "you@yourdomain.com"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:111
 msgid "Application URL"
@@ -953,7 +954,7 @@ msgstr "Inattivo"
 
 #: wp-job-manager-template.php:197
 msgid "Job Application via \"%s\" listing on %s"
-msgstr ""
+msgstr "Offerta di lavoro tramite \"%s\" inserita in elenco %s"
 
 #: wp-job-manager-template.php:255
 msgid "Anywhere"
@@ -969,7 +970,7 @@ msgstr "WP Job Manager"
 
 #. Plugin URI of the plugin/theme
 msgid "https://wpjobmanager.com/"
-msgstr ""
+msgstr "https://wpjobmanager.com/"
 
 #. Description of the plugin/theme
 msgid ""
